--- a/calc.html
+++ b/calc.html
@@ -39,8 +39,9 @@
                                     <td><input type="button" class="btn btn-floating purple" onclick="calculator.display.value += '7'" value="7"></td>
                                     <td><input type="button" class="btn btn-floating purple" onclick="calculator.display.value += '8'" value="8"></td>
                                     <td><input type="button" class="btn btn-floating purple" onclick="calculator.display.value += '9'" value="9"></td>
-                                    <td><input type="button" class="btn btn-floating purple" onclick="calculator.display.value += ' = '" value="*"></td>
+                                    <td><input type="button" class="btn btn-floating purple" onclick="calculator.display.value += ' * '" value="*"></td>
                                 </tr>
+                             
 
                                 <tr>
                                     <td><input type="button" class="btn btn-floating purple" onclick="calculator.display.value = eval(calculator.display.value)" value="="></td>
